2008-05-02  Gabriel Burt  <gabriel.burt@gmail.com>

	* tests/Hyena/SqliteCommandTests.cs: Update to not use ApplyValues; fix
	the build.

2008-05-02  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Radio/LastfmSource.cs: Set
	SourceManager.Dispose property to true so that the SourceManager knows to
	Dispose us, even though we're an extension source.

	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Radio/LastfmActions.cs:
	Listen to the PlaybackController.SourceChanged event, and disable
	shuffle/repeat when switching to a StationSource, and restore when
	switching away and Disposing (so that the original state is not
	overwritten in gconf).  Fixes BGO #526033.

	* src/Extensions/Banshee.PlayQueue/Banshee.PlayQueue/PlayQueueSource.cs:
	Fix silly bug that caused the playback source to switch to the Music
	Library erroneously.

	* src/Dap/Banshee.Dap.MassStorage/Banshee.Dap.MassStorage/MassStorageSource.cs:
	Load the tracks in the LoadFromDevice method, and turn threading off on
	the importer since LoadFromDevice is already called from a thread.

	* src/Core/Banshee.ThickClient/Banshee.Gui/GlobalActions.cs: Comment out
	ImportPlaylist stuff that's not done.

	* src/Core/Banshee.ThickClient/Banshee.Gui/PlaybackShuffleActions.cs:
	* src/Core/Banshee.ThickClient/Banshee.Gui/PlaybackRepeatActions.cs: Add
	Sensitive override that triggers the Changed event.

	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/RepeatActionButton.cs:
	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/NextButton.cs:
	Set the sensitivity of the button to the ActionGroup's sensitivity.

	* src/Core/Banshee.Services/Banshee.Sources/DatabaseSource.cs: Fix bug
	where we had a SqliteModelProvider created for every DatabaseSource
	instead of sharing one.

	* src/Core/Banshee.Services/Banshee.Sources/SourceManager.cs: Dispose
	extension sources that have the property SourceManager.Dispose == true.

	* tests/Hyena/QueryTests.cs: 